# mikrotik-controller

./: ESTADO_ACTUAL_PROYECTO.md  IMPLEMENTATION_REPORT.md  README.md  RESUMEN_EJECUTIVO.md
ai/: implementation_prompt.md  master_prompt.md
backend/: .env.example  .gitignore  CODIGO_REVISADO.md  GUIA_DEPLOY.md  HYBRID_USAGE.md  MCP_USAGE.md  QUICKSTART.md  README.md  SISTEMA_HIBRIDO_RESUMEN.md  TESTING.md  alembic.ini  llm_integration.py  mcp_server.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-hybrid.txt  requirements-mcp.txt  requirements.txt  seed_database.py  setup_dev.sh  setup_hybrid.sh  setup_mcp.sh  test_api.py  test_hybrid.py  test_results.json  validate_code_integrity.py  validate_config.py
backend/alembic/: .gitkeep  env.py
backend/alembic/versions/: 001_initial_schema.py  f4ed02c731ee_rename_sites_metadata_to_sites_site_.py
backend/app/: __init__.py  config.py  dependencies.py  main.py  main_hybrid.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  devices.py
backend/app/connectors/: __init__.py
backend/app/core/: __init__.py  database.py  logging.py  middleware.py  security.py
backend/app/engines/: __init__.py
backend/app/models/: __init__.py  alert.py  audit_log.py  backup.py  base.py  device.py  device_credential.py  job.py  permission.py  role.py  site.py  template.py  tenant.py  user.py
backend/app/schemas/: __init__.py  alert.py  backup.py  common.py  device.py  job.py  template.py  user.py
backend/app/services/: __init__.py  alert_service.py  audit_service.py  backup_service.py  base_service.py  device_service.py  job_service.py  template_service.py  user_service.py
backend/app/utils/: __init__.py  crypto.py
backend/docker/: .gitkeep
backend/tests/: conftest.py  test_config.py
backend/tests/test_security/: test_permission_enforcement.py
backend/tests/test_services/: test_backup_service.py  test_job_service.py
(+28 files in other folders)
